--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ org_summary: > # Enter your summary on the next line. Be sure to indent by two s
 org_full_description: > # Enter your description on the next line. Be sure to indent by two spaces.
   The project aims to collect and then analyze data about common citizen science projects and to introduce valuable and needed changes to the city. 
 
+<img src="vera_images/image_paris.png" alt="hi" class="inline"/>
+
+
 #OPTIONAL
 #Non US-address support coming soon
 org_general_email_inbox: "verainthecity@yahoo.com"
